<?xml version="1.0"?>
<package>
  <name>ros_explorer</name>
  <version>0.1.0</version>
  <description>A web interface for exploring the ROS graph</description>
  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ros_explorer</url>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>rospy</run_depend>

  <export>
    <appname>ROS explorer</appname>
  </export>
</package>
